# iRacing-Tracks-Fetcher

./: .env.example  .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: auth.rs  config.rs  main.rs  tracks.rs  utils.rs
